RESOLVED FIXED36137
[Qt] tst_qwebpage does not pass
https://bugs.webkit.org/show_bug.cgi?id=36137
Summary [Qt] tst_qwebpage does not pass
Robert Hogan
Reported 2010-03-15 14:12:07 PDT
Remove calls to setPage(0) - these were causing tst_qwebpage to segfault at acceptNavigationRequest() and errorPageExtension*().
Attachments
Patch (3.18 KB, patch)
2010-03-15 14:20 PDT, Robert Hogan
no flags
Patch (1.82 KB, patch)
2010-03-15 15:16 PDT, Robert Hogan
hausmann: review+
Robert Hogan
Comment 1 2010-03-15 14:20:17 PDT
Jakub Wieczorek
Comment 2 2010-03-15 14:54:43 PDT
Fixing unstable tests is always a good thing but usually it is better to fix the reason of a failure, I think. Here is the interesting bit of the crash: Program received signal SIGSEGV, Segmentation fault. 0x00007ffff7022dc2 in QWebView::setPage (this=0x71f3a0, page=0x0) at WebKit/qt/Api/qwebview.cpp:401 401 d->page->d->page->settings()->setAcceleratedCompositingEnabled(false); (gdb) bt full #0 0x00007ffff7022dc2 in QWebView::setPage (this=0x71f3a0, page=0x0) at WebKit/qt/Api/qwebview.cpp:401
Robert Hogan
Comment 3 2010-03-15 15:16:00 PDT
Created attachment 50746 [details] Patch Actually fix the bug per Jakub's kind suggestion!
Eric Seidel (no email)
Comment 4 2010-03-15 19:02:20 PDT
Comment on attachment 50746 [details] Patch Why the indent change?
Robert Hogan
Comment 5 2010-03-16 08:36:26 PDT
Robert Hogan
Comment 6 2010-03-16 08:36:55 PDT
(In reply to comment #4) > (From update of attachment 50746 [details]) > Why the indent change? It's moved into an if block.
Note You need to log in before you can comment on or make changes to this bug.