2010-03-15  Robert Hogan  <robert@webkit.org>

Reviewed by Simon Hausmann.

        [Qt] Fix crash in QWebView::setPage()

        tst_qwebpage was crashing on setPage(0)

        https://bugs.webkit.org/show_bug.cgi?id=36137

        * Api/qwebview.cpp:
        (QWebView::setPage):

Canonical link: https://commits.webkit.org/47355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56060 268f45cc-cd09-0410-ab3c-d52691b4dbfc